kubenetes/etc/network-policy/allow-internal-access-only.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal-access-only
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: internalApp
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.0.0.0/16
          except:
            - 10.0.5.0/24
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
